parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ASPAS
    BREAK
    COMMENT
    LCOLCHETE
    RCOLCHETE
    RETURN
    STRINGS
    WRITE

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration_list
Rule 2     declaration_list -> declaration_list declaration
Rule 3     declaration_list -> declaration
Rule 4     declaration -> var_declaration
Rule 5     declaration -> print_stmt
Rule 6     declaration -> read_stmt
Rule 7     declaration -> selection_stmt
Rule 8     declaration -> iteration_stmt
Rule 9     declaration -> expression
Rule 10    print_stmt -> PRINT LPAREN STRING RPAREN SEMI declaration
Rule 11    print_stmt -> PRINT LPAREN STRING RPAREN SEMI
Rule 12    print_stmt -> PRINT LPAREN IDENTIFIER RPAREN SEMI declaration
Rule 13    print_stmt -> PRINT LPAREN IDENTIFIER RPAREN SEMI
Rule 14    print_stmt -> PRINT LPAREN NUMBER RPAREN SEMI declaration
Rule 15    print_stmt -> PRINT LPAREN NUMBER RPAREN SEMI
Rule 16    print_stmt -> PRINT LPAREN boolean RPAREN SEMI declaration
Rule 17    print_stmt -> PRINT LPAREN boolean RPAREN SEMI
Rule 18    print_stmt -> PRINT LPAREN expression RPAREN SEMI declaration
Rule 19    print_stmt -> PRINT LPAREN expression RPAREN SEMI
Rule 20    print_stmt -> PRINT LPAREN RPAREN SEMI declaration
Rule 21    print_stmt -> PRINT LPAREN RPAREN SEMI
Rule 22    var_declaration -> IDENTIFIER var_declaration
Rule 23    var_declaration -> IDENTIFIER
Rule 24    var_declaration -> IDENTIFIER ATRIBUTION NUMBER var_declaration
Rule 25    var_declaration -> IDENTIFIER ATRIBUTION NUMBER SEMI
Rule 26    var_declaration -> IDENTIFIER ATRIBUTION boolean var_declaration
Rule 27    var_declaration -> IDENTIFIER ATRIBUTION boolean SEMI
Rule 28    var_declaration -> IDENTIFIER ATRIBUTION IDENTIFIER var_declaration
Rule 29    var_declaration -> IDENTIFIER ATRIBUTION IDENTIFIER SEMI
Rule 30    var_declaration -> IDENTIFIER ATRIBUTION simple_expression SEMI
Rule 31    statement -> expression_stmt
Rule 32    statement -> selection_stmt
Rule 33    statement -> iteration_stmt
Rule 34    statement -> print_stmt
Rule 35    statement -> read_stmt
Rule 36    expression_stmt -> expression
Rule 37    selection_stmt -> IF LPAREN expression RPAREN LBRACE expression RBRACE ELSE LBRACE expression RBRACE statement
Rule 38    selection_stmt -> IF LPAREN expression RPAREN LBRACE expression RBRACE statement
Rule 39    selection_stmt -> IF LPAREN expression RPAREN LBRACE print_stmt RBRACE
Rule 40    selection_stmt -> IF LPAREN expression RPAREN LBRACE print_stmt RBRACE ELSE LBRACE print_stmt RBRACE
Rule 41    iteration_stmt -> FOR LPAREN var_declaration expression SEMI additive_expression RPAREN LBRACE expression RBRACE statement
Rule 42    iteration_stmt -> FOR LPAREN var_declaration expression SEMI additive_expression RPAREN LBRACE print_stmt RBRACE
Rule 43    iteration_stmt -> WHILE LPAREN expression RPAREN LBRACE expression RBRACE statement
Rule 44    iteration_stmt -> WHILE LPAREN expression RPAREN LBRACE print_stmt RBRACE
Rule 45    iteration_stmt -> DO LBRACE statement SEMI RBRACE WHILE LPAREN expression RPAREN SEMI
Rule 46    iteration_stmt -> DO LBRACE print_stmt RBRACE WHILE LPAREN expression RPAREN SEMI
Rule 47    read_stmt -> READ LPAREN STRING RPAREN SEMI declaration
Rule 48    read_stmt -> READ LPAREN STRING RPAREN SEMI
Rule 49    expression -> IDENTIFIER EQUALITY expression
Rule 50    expression -> simple_expression
Rule 51    expression -> IDENTIFIER EQUALITY IDENTIFIER
Rule 52    expression -> expression LOG expression
Rule 53    expression -> expression OU_LOGICO expression
Rule 54    simple_expression -> additive_expression relop additive_expression
Rule 55    simple_expression -> additive_expression
Rule 56    relop -> MENOR
Rule 57    relop -> MENOREQUALS
Rule 58    relop -> MAIOR
Rule 59    relop -> MAIOREQUALS
Rule 60    relop -> DIFERENTE
Rule 61    relop -> EQUALITY
Rule 62    additive_expression -> additive_expression addop term
Rule 63    additive_expression -> term
Rule 64    additive_expression -> term MINUSMINUS
Rule 65    additive_expression -> term PLUSPLUS
Rule 66    addop -> PLUS
Rule 67    addop -> MINUS
Rule 68    term -> term mulop factor
Rule 69    term -> factor
Rule 70    mulop -> TIMES
Rule 71    mulop -> DIVIDE
Rule 72    factor -> LPAREN expression RPAREN
Rule 73    factor -> IDENTIFIER
Rule 74    factor -> NUMBER
Rule 75    factor -> boolean
Rule 76    factor -> IDENTIFIER LPAREN args RPAREN
Rule 77    boolean -> TRUE
Rule 78    boolean -> FALSE
Rule 79    NUMBER -> INTEGER
Rule 80    NUMBER -> FLOAT
Rule 81    args -> args_list
Rule 82    args -> empty
Rule 83    args_list -> expression
Rule 84    expression -> expression PLUS term
Rule 85    expression -> expression MINUS term
Rule 86    expression -> expression TIMES term
Rule 87    expression -> expression DIVIDE term
Rule 88    expression -> expression TIMESX term
Rule 89    expression -> expression LOG term
Rule 90    expression -> expression OU_LOGICO term
Rule 91    empty -> <empty>

Terminals, with rules where they appear

ASPAS                : 
ATRIBUTION           : 24 25 26 27 28 29 30
BREAK                : 
COMMENT              : 
DIFERENTE            : 60
DIVIDE               : 71 87
DO                   : 45 46
ELSE                 : 37 40
EQUALITY             : 49 51 61
FALSE                : 78
FLOAT                : 80
FOR                  : 41 42
IDENTIFIER           : 12 13 22 23 24 25 26 27 28 28 29 29 30 49 51 51 73 76
IF                   : 37 38 39 40
INTEGER              : 79
LBRACE               : 37 37 38 39 40 40 41 42 43 44 45 46
LCOLCHETE            : 
LOG                  : 52 89
LPAREN               : 10 11 12 13 14 15 16 17 18 19 20 21 37 38 39 40 41 42 43 44 45 46 47 48 72 76
MAIOR                : 58
MAIOREQUALS          : 59
MENOR                : 56
MENOREQUALS          : 57
MINUS                : 67 85
MINUSMINUS           : 64
OU_LOGICO            : 53 90
PLUS                 : 66 84
PLUSPLUS             : 65
PRINT                : 10 11 12 13 14 15 16 17 18 19 20 21
RBRACE               : 37 37 38 39 40 40 41 42 43 44 45 46
RCOLCHETE            : 
READ                 : 47 48
RETURN               : 
RPAREN               : 10 11 12 13 14 15 16 17 18 19 20 21 37 38 39 40 41 42 43 44 45 46 47 48 72 76
SEMI                 : 10 11 12 13 14 15 16 17 18 19 20 21 25 27 29 30 41 42 45 45 46 47 48
STRING               : 10 11 47 48
STRINGS              : 
TIMES                : 70 86
TIMESX               : 88
TRUE                 : 77
WHILE                : 43 44 45 46
WRITE                : 
error                : 

Nonterminals, with rules where they appear

NUMBER               : 14 15 24 25 74
additive_expression  : 41 42 54 54 55 62
addop                : 62
args                 : 76
args_list            : 81
boolean              : 16 17 26 27 75
declaration          : 2 3 10 12 14 16 18 20 47
declaration_list     : 1 2
empty                : 82
expression           : 9 18 19 36 37 37 37 38 38 39 40 41 41 42 43 43 44 45 46 49 52 52 53 53 72 83 84 85 86 87 88 89 90
expression_stmt      : 31
factor               : 68 69
iteration_stmt       : 8 33
mulop                : 68
print_stmt           : 5 34 39 40 40 42 44 46
program              : 0
read_stmt            : 6 35
relop                : 54
selection_stmt       : 7 32
simple_expression    : 30 50
statement            : 37 38 41 43 45
term                 : 62 63 64 65 68 84 85 86 87 88 89 90
var_declaration      : 4 22 24 26 28 41 42

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration_list
    (2) declaration_list -> . declaration_list declaration
    (3) declaration_list -> . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . print_stmt
    (6) declaration -> . read_stmt
    (7) declaration -> . selection_stmt
    (8) declaration -> . iteration_stmt
    (9) declaration -> . expression
    (22) var_declaration -> . IDENTIFIER var_declaration
    (23) var_declaration -> . IDENTIFIER
    (24) var_declaration -> . IDENTIFIER ATRIBUTION NUMBER var_declaration
    (25) var_declaration -> . IDENTIFIER ATRIBUTION NUMBER SEMI
    (26) var_declaration -> . IDENTIFIER ATRIBUTION boolean var_declaration
    (27) var_declaration -> . IDENTIFIER ATRIBUTION boolean SEMI
    (28) var_declaration -> . IDENTIFIER ATRIBUTION IDENTIFIER var_declaration
    (29) var_declaration -> . IDENTIFIER ATRIBUTION IDENTIFIER SEMI
    (30) var_declaration -> . IDENTIFIER ATRIBUTION simple_expression SEMI
    (10) print_stmt -> . PRINT LPAREN STRING RPAREN SEMI declaration
    (11) print_stmt -> . PRINT LPAREN STRING RPAREN SEMI
    (12) print_stmt -> . PRINT LPAREN IDENTIFIER RPAREN SEMI declaration
    (13) print_stmt -> . PRINT LPAREN IDENTIFIER RPAREN SEMI
    (14) print_stmt -> . PRINT LPAREN NUMBER RPAREN SEMI declaration
    (15) print_stmt -> . PRINT LPAREN NUMBER RPAREN SEMI
    (16) print_stmt -> . PRINT LPAREN boolean RPAREN SEMI declaration
    (17) print_stmt -> . PRINT LPAREN boolean RPAREN SEMI
    (18) print_stmt -> . PRINT LPAREN expression RPAREN SEMI declaration
    (19) print_stmt -> . PRINT LPAREN expression RPAREN SEMI
    (20) print_stmt -> . PRINT LPAREN RPAREN SEMI declaration
    (21) print_stmt -> . PRINT LPAREN RPAREN SEMI
    (47) read_stmt -> . READ LPAREN STRING RPAREN SEMI declaration
    (48) read_stmt -> . READ LPAREN STRING RPAREN SEMI
    (37) selection_stmt -> . IF LPAREN expression RPAREN LBRACE expression RBRACE ELSE LBRACE expression RBRACE statement
    (38) selection_stmt -> . IF LPAREN expression RPAREN LBRACE expression RBRACE statement
    (39) selection_stmt -> . IF LPAREN expression RPAREN LBRACE print_stmt RBRACE
    (40) selection_stmt -> . IF LPAREN expression RPAREN LBRACE print_stmt RBRACE ELSE LBRACE print_stmt RBRACE
    (41) iteration_stmt -> . FOR LPAREN var_declaration expression SEMI additive_expression RPAREN LBRACE expression RBRACE statement
    (42) iteration_stmt -> . FOR LPAREN var_declaration expression SEMI additive_expression RPAREN LBRACE print_stmt RBRACE
    (43) iteration_stmt -> . WHILE LPAREN expression RPAREN LBRACE expression RBRACE statement
    (44) iteration_stmt -> . WHILE LPAREN expression RPAREN LBRACE print_stmt RBRACE
    (45) iteration_stmt -> . DO LBRACE statement SEMI RBRACE WHILE LPAREN expression RPAREN SEMI
    (46) iteration_stmt -> . DO LBRACE print_stmt RBRACE WHILE LPAREN expression RPAREN SEMI
    (49) expression -> . IDENTIFIER EQUALITY expression
    (50) expression -> . simple_expression
    (51) expression -> . IDENTIFIER EQUALITY IDENTIFIER
    (52) expression -> . expression LOG expression
    (53) expression -> . expression OU_LOGICO expression
    (84) expression -> . expression PLUS term
    (85) expression -> . expression MINUS term
    (86) expression -> . expression TIMES term
    (87) expression -> . expression DIVIDE term
    (88) expression -> . expression TIMESX term
    (89) expression -> . expression LOG term
    (90) expression -> . expression OU_LOGICO term
    (54) simple_expression -> . additive_expression relop additive_expression
    (55) simple_expression -> . additive_expression
    (62) additive_expression -> . additive_expression addop term
    (63) additive_expression -> . term
    (64) additive_expression -> . term MINUSMINUS
    (65) additive_expression -> . term PLUSPLUS
    (68) term -> . term mulop factor
    (69) term -> . factor
    (72) factor -> . LPAREN expression RPAREN
    (73) factor -> . IDENTIFIER
    (74) factor -> . NUMBER
    (75) factor -> . boolean
    (76) factor -> . IDENTIFIER LPAREN args RPAREN
    (79) NUMBER -> . INTEGER
    (80) NUMBER -> . FLOAT
    (77) boolean -> . TRUE
    (78) boolean -> . FALSE

    IDENTIFIER      shift and go to state 10
    PRINT           shift and go to state 14
    READ            shift and go to state 16
    IF              shift and go to state 17
    FOR             shift and go to state 18
    WHILE           shift and go to state 20
    DO              shift and go to state 21
    LPAREN          shift and go to state 15
    INTEGER         shift and go to state 24
    FLOAT           shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    program                        shift and go to state 1
    declaration_list               shift and go to state 2
    declaration                    shift and go to state 3
    var_declaration                shift and go to state 4
    print_stmt                     shift and go to state 5
    read_stmt                      shift and go to state 6
    selection_stmt                 shift and go to state 7
    iteration_stmt                 shift and go to state 8
    expression                     shift and go to state 9
    NUMBER                         shift and go to state 11
    boolean                        shift and go to state 12
    simple_expression              shift and go to state 13
    additive_expression            shift and go to state 19
    term                           shift and go to state 22
    factor                         shift and go to state 23

state 1

    (0) S' -> program .



state 2

    (1) program -> declaration_list .
    (2) declaration_list -> declaration_list . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . print_stmt
    (6) declaration -> . read_stmt
    (7) declaration -> . selection_stmt
    (8) declaration -> . iteration_stmt
    (9) declaration -> . expression
    (22) var_declaration -> . IDENTIFIER var_declaration
    (23) var_declaration -> . IDENTIFIER
    (24) var_declaration -> . IDENTIFIER ATRIBUTION NUMBER var_declaration
    (25) var_declaration -> . IDENTIFIER ATRIBUTION NUMBER SEMI
    (26) var_declaration -> . IDENTIFIER ATRIBUTION boolean var_declaration
    (27) var_declaration -> . IDENTIFIER ATRIBUTION boolean SEMI
    (28) var_declaration -> . IDENTIFIER ATRIBUTION IDENTIFIER var_declaration
    (29) var_declaration -> . IDENTIFIER ATRIBUTION IDENTIFIER SEMI
    (30) var_declaration -> . IDENTIFIER ATRIBUTION simple_expression SEMI
    (10) print_stmt -> . PRINT LPAREN STRING RPAREN SEMI declaration
    (11) print_stmt -> . PRINT LPAREN STRING RPAREN SEMI
    (12) print_stmt -> . PRINT LPAREN IDENTIFIER RPAREN SEMI declaration
    (13) print_stmt -> . PRINT LPAREN IDENTIFIER RPAREN SEMI
    (14) print_stmt -> . PRINT LPAREN NUMBER RPAREN SEMI declaration
    (15) print_stmt -> . PRINT LPAREN NUMBER RPAREN SEMI
    (16) print_stmt -> . PRINT LPAREN boolean RPAREN SEMI declaration
    (17) print_stmt -> . PRINT LPAREN boolean RPAREN SEMI
    (18) print_stmt -> . PRINT LPAREN expression RPAREN SEMI declaration
    (19) print_stmt -> . PRINT LPAREN expression RPAREN SEMI
    (20) print_stmt -> . PRINT LPAREN RPAREN SEMI declaration
    (21) print_stmt -> . PRINT LPAREN RPAREN SEMI
    (47) read_stmt -> . READ LPAREN STRING RPAREN SEMI declaration
    (48) read_stmt -> . READ LPAREN STRING RPAREN SEMI
    (37) selection_stmt -> . IF LPAREN expression RPAREN LBRACE expression RBRACE ELSE LBRACE expression RBRACE statement
    (38) selection_stmt -> . IF LPAREN expression RPAREN LBRACE expression RBRACE statement
    (39) selection_stmt -> . IF LPAREN expression RPAREN LBRACE print_stmt RBRACE
    (40) selection_stmt -> . IF LPAREN expression RPAREN LBRACE print_stmt RBRACE ELSE LBRACE print_stmt RBRACE
    (41) iteration_stmt -> . FOR LPAREN var_declaration expression SEMI additive_expression RPAREN LBRACE expression RBRACE statement
    (42) iteration_stmt -> . FOR LPAREN var_declaration expression SEMI additive_expression RPAREN LBRACE print_stmt RBRACE
    (43) iteration_stmt -> . WHILE LPAREN expression RPAREN LBRACE expression RBRACE statement
    (44) iteration_stmt -> . WHILE LPAREN expression RPAREN LBRACE print_stmt RBRACE
    (45) iteration_stmt -> . DO LBRACE statement SEMI RBRACE WHILE LPAREN expression RPAREN SEMI
    (46) iteration_stmt -> . DO LBRACE print_stmt RBRACE WHILE LPAREN expression RPAREN SEMI
    (49) expression -> . IDENTIFIER EQUALITY expression
    (50) expression -> . simple_expression
    (51) expression -> . IDENTIFIER EQUALITY IDENTIFIER
    (52) expression -> . expression LOG expression
    (53) expression -> . expression OU_LOGICO expression
    (84) expression -> . expression PLUS term
    (85) expression -> . expression MINUS term
    (86) expression -> . expression TIMES term
    (87) expression -> . expression DIVIDE term
    (88) expression -> . expression TIMESX term
    (89) expression -> . expression LOG term
    (90) expression -> . expression OU_LOGICO term
    (54) simple_expression -> . additive_expression relop additive_expression
    (55) simple_expression -> . additive_expression
    (62) additive_expression -> . additive_expression addop term
    (63) additive_expression -> . term
    (64) additive_expression -> . term MINUSMINUS
    (65) additive_expression -> . term PLUSPLUS
    (68) term -> . term mulop factor
    (69) term -> . factor
    (72) factor -> . LPAREN expression RPAREN
    (73) factor -> . IDENTIFIER
    (74) factor -> . NUMBER
    (75) factor -> . boolean
    (76) factor -> . IDENTIFIER LPAREN args RPAREN
    (79) NUMBER -> . INTEGER
    (80) NUMBER -> . FLOAT
    (77) boolean -> . TRUE
    (78) boolean -> . FALSE

    $end            reduce using rule 1 (program -> declaration_list .)
    IDENTIFIER      shift and go to state 10
    PRINT           shift and go to state 14
    READ            shift and go to state 16
    IF              shift and go to state 17
    FOR             shift and go to state 18
    WHILE           shift and go to state 20
    DO              shift and go to state 21
    LPAREN          shift and go to state 15
    INTEGER         shift and go to state 24
    FLOAT           shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    declaration                    shift and go to state 28
    var_declaration                shift and go to state 4
    print_stmt                     shift and go to state 5
    read_stmt                      shift and go to state 6
    selection_stmt                 shift and go to state 7
    iteration_stmt                 shift and go to state 8
    expression                     shift and go to state 9
    NUMBER                         shift and go to state 11
    boolean                        shift and go to state 12
    simple_expression              shift and go to state 13
    additive_expression            shift and go to state 19
    term                           shift and go to state 22
    factor                         shift and go to state 23

state 3

    (3) declaration_list -> declaration .

    IDENTIFIER      reduce using rule 3 (declaration_list -> declaration .)
    PRINT           reduce using rule 3 (declaration_list -> declaration .)
    READ            reduce using rule 3 (declaration_list -> declaration .)
    IF              reduce using rule 3 (declaration_list -> declaration .)
    FOR             reduce using rule 3 (declaration_list -> declaration .)
    WHILE           reduce using rule 3 (declaration_list -> declaration .)
    DO              reduce using rule 3 (declaration_list -> declaration .)
    LPAREN          reduce using rule 3 (declaration_list -> declaration .)
    INTEGER         reduce using rule 3 (declaration_list -> declaration .)
    FLOAT           reduce using rule 3 (declaration_list -> declaration .)
    TRUE            reduce using rule 3 (declaration_list -> declaration .)
    FALSE           reduce using rule 3 (declaration_list -> declaration .)
    $end            reduce using rule 3 (declaration_list -> declaration .)


state 4

    (4) declaration -> var_declaration .

    IDENTIFIER      reduce using rule 4 (declaration -> var_declaration .)
    PRINT           reduce using rule 4 (declaration -> var_declaration .)
    READ            reduce using rule 4 (declaration -> var_declaration .)
    IF              reduce using rule 4 (declaration -> var_declaration .)
    FOR             reduce using rule 4 (declaration -> var_declaration .)
    WHILE           reduce using rule 4 (declaration -> var_declaration .)
    DO              reduce using rule 4 (declaration -> var_declaration .)
    LPAREN          reduce using rule 4 (declaration -> var_declaration .)
    INTEGER         reduce using rule 4 (declaration -> var_declaration .)
    FLOAT           reduce using rule 4 (declaration -> var_declaration .)
    TRUE            reduce using rule 4 (declaration -> var_declaration .)
    FALSE           reduce using rule 4 (declaration -> var_declaration .)
    $end            reduce using rule 4 (declaration -> var_declaration .)
    RBRACE          reduce using rule 4 (declaration -> var_declaration .)
    SEMI            reduce using rule 4 (declaration -> var_declaration .)


state 5

    (5) declaration -> print_stmt .

    IDENTIFIER      reduce using rule 5 (declaration -> print_stmt .)
    PRINT           reduce using rule 5 (declaration -> print_stmt .)
    READ            reduce using rule 5 (declaration -> print_stmt .)
    IF              reduce using rule 5 (declaration -> print_stmt .)
    FOR             reduce using rule 5 (declaration -> print_stmt .)
    WHILE           reduce using rule 5 (declaration -> print_stmt .)
    DO              reduce using rule 5 (declaration -> print_stmt .)
    LPAREN          reduce using rule 5 (declaration -> print_stmt .)
    INTEGER         reduce using rule 5 (declaration -> print_stmt .)
    FLOAT           reduce using rule 5 (declaration -> print_stmt .)
    TRUE            reduce using rule 5 (declaration -> print_stmt .)
    FALSE           reduce using rule 5 (declaration -> print_stmt .)
    $end            reduce using rule 5 (declaration -> print_stmt .)
    RBRACE          reduce using rule 5 (declaration -> print_stmt .)
    SEMI            reduce using rule 5 (declaration -> print_stmt .)


state 6

    (6) declaration -> read_stmt .

    IDENTIFIER      reduce using rule 6 (declaration -> read_stmt .)
    PRINT           reduce using rule 6 (declaration -> read_stmt .)
    READ            reduce using rule 6 (declaration -> read_stmt .)
    IF              reduce using rule 6 (declaration -> read_stmt .)
    FOR             reduce using rule 6 (declaration -> read_stmt .)
    WHILE           reduce using rule 6 (declaration -> read_stmt .)
    DO              reduce using rule 6 (declaration -> read_stmt .)
    LPAREN          reduce using rule 6 (declaration -> read_stmt .)
    INTEGER         reduce using rule 6 (declaration -> read_stmt .)
    FLOAT           reduce using rule 6 (declaration -> read_stmt .)
    TRUE            reduce using rule 6 (declaration -> read_stmt .)
    FALSE           reduce using rule 6 (declaration -> read_stmt .)
    $end            reduce using rule 6 (declaration -> read_stmt .)
    RBRACE          reduce using rule 6 (declaration -> read_stmt .)
    SEMI            reduce using rule 6 (declaration -> read_stmt .)


state 7

    (7) declaration -> selection_stmt .

    IDENTIFIER      reduce using rule 7 (declaration -> selection_stmt .)
    PRINT           reduce using rule 7 (declaration -> selection_stmt .)
    READ            reduce using rule 7 (declaration -> selection_stmt .)
    IF              reduce using rule 7 (declaration -> selection_stmt .)
    FOR             reduce using rule 7 (declaration -> selection_stmt .)
    WHILE           reduce using rule 7 (declaration -> selection_stmt .)
    DO              reduce using rule 7 (declaration -> selection_stmt .)
    LPAREN          reduce using rule 7 (declaration -> selection_stmt .)
    INTEGER         reduce using rule 7 (declaration -> selection_stmt .)
    FLOAT           reduce using rule 7 (declaration -> selection_stmt .)
    TRUE            reduce using rule 7 (declaration -> selection_stmt .)
    FALSE           reduce using rule 7 (declaration -> selection_stmt .)
    $end            reduce using rule 7 (declaration -> selection_stmt .)
    RBRACE          reduce using rule 7 (declaration -> selection_stmt .)
    SEMI            reduce using rule 7 (declaration -> selection_stmt .)


state 8

    (8) declaration -> iteration_stmt .

    IDENTIFIER      reduce using rule 8 (declaration -> iteration_stmt .)
    PRINT           reduce using rule 8 (declaration -> iteration_stmt .)
    READ            reduce using rule 8 (declaration -> iteration_stmt .)
    IF              reduce using rule 8 (declaration -> iteration_stmt .)
    FOR             reduce using rule 8 (declaration -> iteration_stmt .)
    WHILE           reduce using rule 8 (declaration -> iteration_stmt .)
    DO              reduce using rule 8 (declaration -> iteration_stmt .)
    LPAREN          reduce using rule 8 (declaration -> iteration_stmt .)
    INTEGER         reduce using rule 8 (declaration -> iteration_stmt .)
    FLOAT           reduce using rule 8 (declaration -> iteration_stmt .)
    TRUE            reduce using rule 8 (declaration -> iteration_stmt .)
    FALSE           reduce using rule 8 (declaration -> iteration_stmt .)
    $end            reduce using rule 8 (declaration -> iteration_stmt .)
    RBRACE          reduce using rule 8 (declaration -> iteration_stmt .)
    SEMI            reduce using rule 8 (declaration -> iteration_stmt .)


state 9

    (9) declaration -> expression .
    (52) expression -> expression . LOG expression
    (53) expression -> expression . OU_LOGICO expression
    (84) expression -> expression . PLUS term
    (85) expression -> expression . MINUS term
    (86) expression -> expression . TIMES term
    (87) expression -> expression . DIVIDE term
    (88) expression -> expression . TIMESX term
    (89) expression -> expression . LOG term
    (90) expression -> expression . OU_LOGICO term
